--- a/src/scss/layout/admin/content.scss
+++ b/src/scss/layout/admin/content.scss
@@ -11,8 +11,10 @@
   display: none;
 }
 
-.sidebar-collapsed .content-wrapper {
-  margin-left: 280px;
+@media (min-width: 992px) {
+  .sidebar-collapsed .content-wrapper {
+    margin-left: 280px;
+  }
 }
 
 @media (max-width: 991.98px) {
