--- a/src/scss/layout/admin/dashboard/layout.scss
+++ b/src/scss/layout/admin/dashboard/layout.scss
@@ -35,8 +35,10 @@
   }
 }
 
-.sidebar-collapsed .dashboard-content .scrollable-tabs {
-  left: 280px;
+@media (min-width: 992px) {
+  .sidebar-collapsed .dashboard-content .scrollable-tabs {
+    left: 280px;
+  }
 }
 
 @media (max-width: 991.98px) {
